fixed footer align items: center:

--- a/app/assets/stylesheets/greeting.scss
+++ b/app/assets/stylesheets/greeting.scss
@@ -175,7 +175,8 @@ a.shmedium-home-link {
   // padding-left: 65px;
   // padding-right: 50px;
   padding-bottom: 12px;
-  color: black
+  color: black;
+  letter-spacing: -2px
 }
 
 a.nav-link-login{
